<resources>
    <string name="app_name">Amrock</string>

    <!-- Common -->
    <string name="back">Back</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!-- Login -->
    <string name="login">Login</string>
    <string name="content_description_logo">Logo</string>
    <string name="help">Help</string>
    <string name="email_rules">Must be in the format name@example.com\n</string>
    <string name="password_rules">Must be at least 9 characters long with at least 1 uppercase
character, 1 lowercase character, and 1 number</string>
    <string name="login_error">Invalid email or password format</string>

    <!-- Repositories -->
    <string name="repositories">Repositories</string>
    <string name="repositories_error">Error</string>
    <string name="repositories_unknown_error">Unknown error</string>
    <string name="date_format">"MM-dd-yyyy\nHH:mm:ss"</string>

    <!-- Repo detail -->
    <string name="go_back">Go back</string>
    <string name="go_forward">Go forward</string>
    <string name="refresh">Refresh</string>
    <string name="detail_error">Unable to load page</string>
</resources>