<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/content_description_logo"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical2"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical1"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/email"
        android:nextFocusForward="@+id/editPassword"
        app:layout_constraintBottom_toTopOf="@id/layoutPassword"
        app:layout_constraintEnd_toEndOf="@id/imageLogo"
        app:layout_constraintStart_toStartOf="@id/imageLogo"
        app:layout_constraintTop_toBottomOf="@id/imageLogo"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/password"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal2"
        app:layout_constraintEnd_toEndOf="@id/layoutEmail"
        app:layout_constraintStart_toStartOf="@id/layoutEmail"
        app:layout_constraintTop_toBottomOf="@id/layoutEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnHelp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/help"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@id/layoutEmail"
        app:layout_constraintStart_toStartOf="@id/layoutEmail"
        app:layout_constraintTop_toBottomOf="@id/layoutPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal2"
        app:layout_constraintEnd_toEndOf="@id/layoutEmail"
        app:layout_constraintStart_toStartOf="@id/layoutEmail"
        app:layout_constraintTop_toBottomOf="@id/btnHelp" />

</androidx.constraintlayout.widget.ConstraintLayout>