<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textError"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center"
        android:text="@string/error"
        android:textColor="@color/red"
        android:textSize="@dimen/text_caption"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical2"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical1"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal1"
        tools:visibility="visible" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:text="@string/email"
        android:textSize="@dimen/text_body1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical2"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical1"
        app:layout_constraintTop_toBottomOf="@id/textError" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textEmailHelp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="start"
        android:text="@string/email_rules"
        android:textSize="@dimen/text_body1"
        app:layout_constraintEnd_toEndOf="@id/textEmail"
        app:layout_constraintStart_toStartOf="@id/textEmail"
        app:layout_constraintTop_toBottomOf="@id/textEmail" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:text="@string/password"
        android:textSize="@dimen/text_body1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/textEmail"
        app:layout_constraintStart_toStartOf="@id/textEmail"
        app:layout_constraintTop_toBottomOf="@id/textEmailHelp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textPasswordHelp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="start"
        android:text="@string/password_rules"
        android:textSize="@dimen/text_body1"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal2"
        app:layout_constraintEnd_toEndOf="@id/textPassword"
        app:layout_constraintStart_toStartOf="@id/textPassword"
        app:layout_constraintTop_toBottomOf="@id/textPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>